@@ -1,3 +1,6 @@
+2011-12-7 yusei
+* Add ProductionOrderLine property sheet to Production Order Line portal type. It had to be added, but it did not.
+
 2011-08-30 tatuya
 * Fix the issue that the Stock tab in Production Order or Production Packing List returns all the inventories when the Deliveries do not have a resource.
 
